...
    <!--snooze_dialog-->
    <string name="snooze_tittle">Snooze</string>
    <string name="turnOff_tittle">Turn Off</string>
    <string name="Alarm">Alarm</string>

    <!--map_settings_menu-->
    <string name="start_menu">Preload First point</string>
    <string name="end_menu">Preload Second point</string>
    <string name="user_camera_position_menu">Preload your last position</string>
    <string name="do_not_save_menu">Do not save and load my locations</string>

    <!--route_type_menu-->
    <string name="bus_menu">Bus</string>
    <string name="car_menu">Car</string>
    <string name="pedestrian_menu">Walk</string>

    <!--fragment_sleep_statistic-->
    <string name="your_sleep_statistic_no_stat_message">To see your sleep statistic, sleep First !</string>
    <string name="delete_sleep_statistic">Delete Sleep Statistic</string>
...
